[package]

name = "solver_ga"
version = "0.1.0"
edition = "2021"
authors = ["cnpryer <cnpryer@gmail.com>"]
license = "MIT"
description = "Solve optimization problems."
repository = "https://github.com/cnpryer/solver.git"
homepage = "https://github.com/cnpryer/solver.git"
readme = "README.md"
keywords = [
    "solver"
]
categories = [
    "science", 
    "mathematics",
]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
rand = "0.8.5"